--- a/examples/mini_app_f90/Makefile
+++ b/examples/mini_app_f90/Makefile
@@ -39,7 +39,7 @@ include ${REG_STEER_HOME}/make/Makefile.${ARCH}
 TARGET   = mini_app2
 
 ${TARGET}: ${TARGET}.o ${REG_STEER_HOME}/include/reg_steer_f90.inc \
-${REG_STEER_HOME}/lib$(NBIT)/libReG_Steer.a
+${REG_STEER_HOME}/lib$(NBIT)/$(LIB_NAME)
 	-${F90} ${F90_FLAGS} ${TARGET}.o -o $@ ${STEER_LIBS} ${GLOBUS_LDFLAGS} \
 	-lReG_Steer ${STEER_LDFLAGS} ${GLOBUS_PKG_LIBS}
 
