Changes to make files due to the fact that we are now building shared libs by default. The user can still build a static lib if they really must.

--- a/make/Makefile.SGI
+++ b/make/Makefile.SGI
@@ -37,6 +37,10 @@ NBIT = 32
 # Location of C compiler and flags to use
 CC = cc
 C_FLAGS = -O2 -n32
+LIB_C_FLAGS = ${C_FLAGS} -KPIC -I../include
+
+# Linker flags to use
+LD_FLAGS = -n32 -shared -soname libReG_Steer.so -L${REG_XML_LIBDIR}${NBIT} -lxml2
 
 # Location of F90 compiler (if any) and flags to use
 F90 = f90
