--- a/make/Makefile.TRU64
+++ b/make/Makefile.TRU64
@@ -37,6 +37,10 @@ NBIT = 64
 # Location of C compiler and flags to use
 CC = cc
 C_FLAGS = -O2 -arch host -tune host
+LIB_C_FLAGS = ${C_FLAGS} -I../include
+
+# Linker flags to use
+LD_FLAGS = -shared -soname libReG_Steer.so -L${REG_XML_LIBDIR} -lxml2
 
 # Location of F90 compiler (if any) and flags to use
 F90 = f90
