--- a/make/Makefile.ALTIX
+++ b/make/Makefile.ALTIX
@@ -48,6 +48,10 @@ F90_MPI = efc
 F90_FLAGS = -O2
 MPI_FLAGS = -lmpi
 
+# Set-up access to M4 scripts for production of F90 wrappers, this is
+# taken from the PVM project.
+M4FILE = conf/ALTIX.m4
+
 # Location of java compiler - used to produce proxy binary
 JAVAC = /usr/java/j2sdk1.4.2_03/bin/javac
 
