--- a/make/Makefile.DARWIN
+++ b/make/Makefile.DARWIN
@@ -44,6 +44,10 @@ F90_MPI =
 F90_FLAGS = 
 MPI_FLAGs = 
 
+# Set-up access to M4 scripts for production of F90 wrappers, this is
+# taken from the PVM project.
+M4FILE = conf/DARWIN.m4
+
 # Location of java compiler - used to produce proxy binary
 JAVAC          = /usr/bin/javac
 
