--- a/make/Makefile.LINUX-Intel
+++ b/make/Makefile.LINUX-Intel
@@ -48,6 +48,10 @@ F90_MPI = mpif90
 F90_FLAGS = -O2
 MPI_FLAGS = -lmpich
 
+# Set-up access to M4 scripts for production of F90 wrappers, this is
+# taken from the PVM project.
+M4FILE = conf/LINUX.m4
+
 # Location of java compiler - used to produce proxy binary
 JAVAC          = /usr/bin/javac
 
