--- a/make/Makefile.LINUX-Pgi
+++ b/make/Makefile.LINUX-Pgi
@@ -44,6 +44,10 @@ F90_MPI = pgf90
 F90_FLAGS = 
 MPI_FLAGS = -lmpich -lgm
 
+# Set-up access to M4 scripts for production of F90 wrappers, this is
+# taken from the PVM project.
+M4FILE = conf/LINUX.m4
+
 # Location of java compiler - used to produce proxy binary
 JAVAC          = /usr/bin/javac
 
