--- a/make/Makefile.SP2MPI
+++ b/make/Makefile.SP2MPI
@@ -50,6 +50,10 @@ F90_MPI = mpxlf90_r
 F90_FLAGS = -O2 -qsuffix=f=f90:cpp=f90 -q64 -brtl
 MPI_FLAGS = -lmpi
 
+# Set-up access to M4 scripts for production of F90 wrappers, this is
+# taken from the PVM project.
+M4FILE = conf/SP2MPI.m4
+
 # Location of java compiler - used to produce proxy binary
 JAVAC          = /usr/bin/javac
 
