Added ReG_Steer_Logging.o to the list of objects that need to be built.

--- a/src/Makefile.shared
+++ b/src/Makefile.shared
@@ -42,6 +42,7 @@ OBJECTS	       = ReG_Steer_Appside_f.o \
         ReG_Steer_Appside_Soap.o \
         ReG_Steer_Appside_File.o \
         ReG_Steer_Browser.o \
+	ReG_Steer_Logging.o \
 	stdsoap2.o soapC.o soapClient.o
 
 DEL_OBJS=ReG_Steer_Appside_f.o \
@@ -54,5 +55,6 @@ DEL_OBJS=ReG_Steer_Appside_f.o \
         ReG_Steer_Steerside_Soap.o \
         ReG_Steer_Appside_Soap.o \
         ReG_Steer_Appside_File.o \
-        ReG_Steer_Browser.o
+        ReG_Steer_Browser.o \
+	ReG_Steer_Logging.o
 
