--- a/src/Makefile.sfd
+++ b/src/Makefile.sfd
@@ -38,11 +38,21 @@ include Makefile.shared
 INCLUDE_PATH   = ${STEER_INCLUDES}
 LIB_PATH       = ${REG_STEER_HOME}/lib$(NBIT)
 
-all:	del ${OBJECTS}
+all:	del make_f90 ${OBJECTS}
 	${CC} ${LD_FLAGS} -o ${LIB_PATH}/libReG_SteerSoapFileDebug.so ${OBJECTS}
 
 del:
 	rm -f ${DEL_OBJS}
+
+make_f90:
+	cd stubs; ${MAKE}; cd ..
+	-${F90} ${LIB_C_FLAGS} \
+        -DREG_SOCKET_SAMPLES=0 \
+        -DREG_SOAP_STEERING=0 \
+        -DREG_DEBUG=0 \
+        -DREG_DEBUG_FULL=0 \
+        -DREG_STEER_LIB_VERSION=\"${REG_STEER_LIB_VERSION}\" \
+        ${INCLUDE_PATH} -c ReG_Steering_Initialize.f90 -o ReG_Steering_Initialize.o
 
 ReG_Steer_Appside_f.c: ReG_Steer_Appside_f.m4 \
 	 ${M4FILE}
@@ -54,15 +64,6 @@ ReG_Steer_Appside_f.o: ReG_Steer_Appside_f.c \
 	 ../include/ReG_Steer_types.h \
 	 ../include/ReG_Steer_Common.h \
 	 ../include/ReG_Steer_Appside_Sockets.h
-
-ReG_Steering_Initialize.o: ReG_Steering_Initialize.f90
-	${F90} ${LIB_C_FLAGS} \
-        -DREG_SOCKET_SAMPLES=0 \
-        -DREG_SOAP_STEERING=0 \
-        -DREG_DEBUG=0 \
-        -DREG_DEBUG_FULL=0 \
-        -DREG_STEER_LIB_VERSION=\"${REG_STEER_LIB_VERSION}\" \
-        ${INCLUDE_PATH} -c $< -o $@
 
 .c.o:
 	${CC} ${LIB_C_FLAGS} \
