--- a/wrappers/Makefile.wrap
+++ b/wrappers/Makefile.wrap
@@ -16,3 +16,4 @@ REG_PYTHON_INC=-I/usr/include/python2.2 -I/usr/lib/python2.2/config/ -DHAVE_CONF
 # java
 REG_JAVA_PATH=/usr/java/j2sdk1.4.2_01
 REG_JAVA_INC=-I${REG_JAVA_PATH}/include -I${REG_JAVA_PATH}/include/linux
+JAVAC=${REG_JAVA_PATH}/bin/javac
