Removed perl and tcl from the make clean rule for now as it caused an infinite loop!

--- a/wrappers/Makefile
+++ b/wrappers/Makefile
@@ -21,8 +21,8 @@ none:
 clean:
 	rm -rf *~ core
 	cd python; ${MAKE} clean
-	cd perl;   ${MAKE} clean
-	cd tcl;    ${MAKE} clean
 	cd java;   ${MAKE} clean
+#	cd perl;   ${MAKE} clean
+#	cd tcl;    ${MAKE} clean
 
 FORCE:
