Fixed silly dependency error whereby things weren't being rebuilt if the ReG_Steer.i file was altered...

--- a/wrappers/python/Makefile
+++ b/wrappers/python/Makefile
@@ -10,7 +10,7 @@ ReG_Steer_wrap.o: ReG_Steer_wrap.c
 	${CC} -c ReG_Steer_wrap.c -fpic -I/usr/include \
 	-I${REG_STEER_HOME}/include ${REG_PYTHON_INC} 
 
-ReG_Steer_wrap.c:
+ReG_Steer_wrap.c: ReG_Steer.i
 	${REG_SWIG} -python -shadow ReG_Steer.i
 
 clean:
