--- a/wrappers/Makefile
+++ b/wrappers/Makefile
@@ -51,8 +51,8 @@ none:
 clean:
 	rm -rf *~ core
 	cd python; ${MAKE} clean
+	cd perl;   ${MAKE} clean
 	cd java;   ${MAKE} clean
-#	cd perl;   ${MAKE} clean
 #	cd tcl;    ${MAKE} clean
 
 FORCE:
