--- a/wrappers/Makefile.wrap
+++ b/wrappers/Makefile.wrap
@@ -32,7 +32,7 @@
 # or none for no wrapping.
 
 REG_WRAP=none
-#REG_WRAP=python java
+#REG_WRAP=python perl java
 #REG_WRAP=python perl tcl java
 
 # Set REG_WRAP_LINK to be one of the following lines:
@@ -46,6 +46,9 @@ REG_SWIG=/usr/local/bin/swig
 
 # python
 REG_PYTHON_INC=-I/usr/include/python2.2 -I/usr/lib/python2.2/config/ -DHAVE_CONFIG_H
+
+# perl
+REG_PERL_INC=-I/usr/local/lib/perl5/5.6.1/i686-linux-ld/CORE -Dbool=char
 
 # java
 REG_JAVA_PATH=/usr/java/j2sdk1.4.2_01
