Updated copyright notices and put full path to m4 file in LINUX Makefile

--- a/make/Makefile.DARWIN
+++ b/make/Makefile.DARWIN
@@ -1,12 +1,11 @@
 #  Include file for MacOS X specific configuration.
 #
-#  (C) Copyright 2002, 2004, University of Manchester, United Kingdom,
+#  (C) Copyright 2005, University of Manchester, United Kingdom,
 #  all rights reserved.
 #
-#  This software is produced by the Supercomputing, Visualization and
-#  e-Science Group, Manchester Computing, University of Manchester
-#  as part of the RealityGrid project (http://www.realitygrid.org),
-#  funded by the EPSRC under grants GR/R67699/01 and GR/R67699/02.
+#  This software was developed by the RealityGrid project
+#  (http://www.realitygrid.org), funded by the EPSRC under grants
+#  GR/R67699/01 and GR/R67699/02.
 #
 #  LICENCE TERMS
 #
@@ -21,7 +20,7 @@
 #
 #  THIS MATERIAL IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 #  "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
-#  LIMITED  TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
+#  LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 #  A PARTICULAR PURPOSE ARE DISCLAIMED. THE ENTIRE RISK AS TO THE QUALITY
 #  AND PERFORMANCE OF THE PROGRAM IS WITH YOU.  SHOULD THE PROGRAM PROVE
 #  DEFECTIVE, YOU ASSUME THE COST OF ALL NECESSARY SERVICING, REPAIR OR
