--- a/make/Makefile.DARWIN
+++ b/make/Makefile.DARWIN
@@ -45,7 +45,7 @@ MPI_FLAGs =
 
 # Set-up access to M4 scripts for production of F90 wrappers, this is
 # taken from the PVM project.
-M4FILE = conf/DARWIN.m4
+M4FILE = ${REG_STEER_HOME}/src/conf/DARWIN.m4
 
 # Location of java compiler - used to produce proxy binary
 JAVAC          = /usr/bin/javac
