--- a/make/Makefile.SP2MPI
+++ b/make/Makefile.SP2MPI
@@ -51,7 +51,7 @@ MPI_FLAGS = -lmpi
 
 # Set-up access to M4 scripts for production of F90 wrappers, this is
 # taken from the PVM project.
-M4FILE = conf/SP2MPI.m4
+M4FILE = ${REG_STEER_HOME}/src/conf/SP2MPI.m4
 
 # Location of java compiler - used to produce proxy binary
 JAVAC          = /usr/bin/javac
